--- a/Node Blog System/nodeblog/views/layout.jade
+++ b/Node Blog System/nodeblog/views/layout.jade
@@ -20,7 +20,7 @@ html
                         li.active
                             a(href='/') Home
                         li
-                            a(href='/post/add') Add post
+                            a(href='/posts/add') Add post
                         li
                             a(href='/catergories/add') Add catergories
 
